# Polish-Footballers-Abroad-Tracker-Stats

./: .env.example  .gitignore  CLAUDE.md  PLAN_ADVANCED_STATS.md  PLAN_ADVANCED_STATS_V2.md  PLAN_AUTO_DETECT_PLAYERS.md  PLAN_AUTO_SYNC.md  PLAN_COMPARE_TAB.md  PLAN_POLISH_TRACKER.md  README.md  docker-compose.yml  pyrightconfig.json
.claude/skills/sync/: SKILL.md
.github/workflows/: ci-cd.yml  sync-european.yml  sync-niche.yml  sync-top.yml  sync.yml
.streamlit/: config.toml
backend/: Dockerfile  README.md  lineup_debug.json  pyproject.toml  sync_full.py  sync_players.py  test_api.py  test_gk_stats_api.py  test_lineup.py  test_matches.py
backend/alembic/: env.py
backend/alembic/versions/: 4e341ffb897a_add_api_rate_limit_table.py  767fab27baed_add_player_heatmap_positions.py
backend/app/: __init__.py  main.py  notifications.py
backend/app/api/v1/: __init__.py  admin.py  health.py  heatmaps.py  leagues.py  players.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/schemas/: heatmap.py  player.py
backend/app/services/: rapidapi.py  rate_limiter.py
frontend/: .env.example  Dockerfile  app.py  pyproject.toml  requirements.txt  translations.py
frontend/.streamlit/: config.toml
frontend/pages/: 1_dashboard.py  2_search.py  3_compare.py
frontend/utils/: __init__.py  theme.py
